src/test/pass/tuple_subscript.ly
string s = <[1, "2"]> [1]