src/test/fail/invalid_tuple_subscript.ly
###
SyntaxError: Index 3 is out of range for tuple[integer, string].
Where: File "test/fail/invalid_tuple_subscript.ly" at line 6
###

string s = <[1, "2"]> [3]
